# cpp-kafka

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  vcpkg.json  your_program.sh
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  ProjectOptions.cmake  Sanitizers.cmake
src/: api_versions_response.cpp  describe_topics_response.cpp  fetch_response.cpp  kafka_parser.cpp  kafka_response.cpp  kafka_server.cpp  log_metadata_reader.cpp  main.cpp
src/common/: CMakeLists.txt
src/common/include/: kafka_errors.hpp  kafka_metadata.hpp
src/common/modules/: kafka_errors.ixx
src/core/: CMakeLists.txt  kafka_parser.cpp  kafka_server.cpp  thread_pool.cpp
src/core/include/: kafka_parser.hpp  kafka_server.hpp  socket_fd.hpp
src/core/tests/: CMakeLists.txt  parser_test.cpp  socket_fd_test.cpp
src/include/: api_version_request.hpp  api_version_response.hpp  byte_reader.hpp  describe_topics_partitions_response.hpp  describe_topics_response.hpp  fetch_request.hpp  fetch_response.hpp  kafka_errors.hpp  kafka_metadata.hpp  kafka_parser.hpp  kafka_request.hpp  kafka_response.hpp  kafka_server.hpp  log_metadata_reader.hpp  message_writer.hpp  record_batch_reader.hpp  thread_pool.hpp
src/protocol/: CMakeLists.txt
src/protocol/api_versions/: CMakeLists.txt  api_versions_response.cpp
src/protocol/api_versions/include/: api_versions_request.hpp  api_versions_response.hpp
src/protocol/base/include/: api_keys.hpp  byte_reader.hpp  kafka_request_variant.hpp  kafka_types.hpp  message_writer.hpp
src/protocol/describe_topic_partitions/: CMakeLists.txt  describe_topic_partitions_response.cpp
src/protocol/describe_topic_partitions/include/: describe_topic_partitions_request.hpp  describe_topic_partitions_response.hpp
src/protocol/fetch/: CMakeLists.txt  fetch_response.cpp
src/protocol/fetch/include/: fetch_request.hpp  fetch_response.hpp
src/protocol/parser/: CMakeLists.txt  kafka_parser.cpp
src/protocol/parser/include/: kafka_parser.hpp
src/protocol/parser/tests/: CMakeLists.txt  parser_test.cpp
src/protocol/requests/include/: api_version_request.hpp  describe_topic_partitions_request.hpp  fetch_request.hpp  kafka_request_variant.hpp
src/protocol/responses/: api_versions_response.cpp  describe_topics_response.cpp  fetch_response.cpp
src/protocol/responses/include/: api_version_response.hpp  describe_topics_partitions_response.hpp  fetch_response.hpp
src/protocol/tests/: CMakeLists.txt  api_versions_response_test.cpp  fetch_response_test.cpp
src/server/: CMakeLists.txt  kafka_server.cpp  thread_pool.cpp
src/server/include/: kafka_server.hpp  socket_fd.hpp  thread_pool.hpp
src/server/tests/: CMakeLists.txt  thread_pool_test.cpp
src/storage/: CMakeLists.txt  log_metadata_reader.cpp  metadata_decoder.cpp
src/storage/include/: kafka_metadata.hpp  log_metadata_reader.hpp  metadata_decoder.hpp  record_batch_reader.hpp  storage_error.hpp  storage_service.hpp  storage_types.hpp
src/storage/include/internal/: storage_service_impl.hpp
src/storage/include/io/: binary_cursor.hpp  path_resolver.hpp
src/storage/include/log/: batch_scanner.hpp  log_store.hpp
src/storage/include/metadata/: metadata_decoder.hpp  metadata_store.hpp  record_extractor.hpp
src/storage/src/: storage_service_factory.cpp
src/storage/src/internal/: storage_service_impl.cpp
src/storage/src/io/: path_resolver.cpp
src/storage/src/log/: batch_scanner.cpp  log_store.cpp
src/storage/src/metadata/: metadata_decoder.cpp  metadata_store.cpp  record_extractor.cpp
src/storage/tests/: CMakeLists.txt  metadata_decoder_test.cpp  path_resolver_test.cpp  storage_service_test.cpp
