add_library(kafka_protocol_describe_topic_partitions describe_topic_partitions_response.cpp)
target_include_directories(kafka_protocol_describe_topic_partitions PUBLIC include)
target_link_libraries(kafka_protocol_describe_topic_partitions PUBLIC kafka_protocol_base)
kafka_enable_warnings(kafka_protocol_describe_topic_partitions)
kafka_enable_sanitizers(kafka_protocol_describe_topic_partitions)
kafka_enable_coverage(kafka_protocol_describe_topic_partitions)
